--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,16 +1,20 @@
-services:
+parameters:
+    ns_admin.service.class: 'NS\AdminBundle\Service\AdmionService'
 
-    # menu builder
+services:
     ns_admin.menu_builder:
         class: NS\AdminBundle\Menu\Builder
         arguments: [@knp_menu.factory, %ns_admin.bundles%]
         calls:
             - [setContainer, [@service_container]]
 
-    # main menu
     ns_admin.menu.main:
         class: Knp\Menu\MenuItem
         factory_service: ns_admin.menu_builder
         factory_method: createMainMenu
         tags:
             - { name: knp_menu.menu, alias: main }
+
+    ns_admin.service:
+        class: %ns_admin.service.class%
+        arguments: [%ns_admin.bundles%]
