UPDATE Some admin menu refactoring

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -4,9 +4,7 @@ parameters:
 services:
     ns_admin.menu_builder:
         class: NS\AdminBundle\Menu\Builder
-        arguments: [@knp_menu.factory, %ns_admin.bundles%]
-        calls:
-            - [setContainer, [@service_container]]
+        arguments: [@knp_menu.factory, @ns_admin.service, @knp_menu.matcher]
 
     ns_admin.menu.main:
         class: Knp\Menu\MenuItem
