FIX Small fix to enable direct pages routing

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,4 +1,8 @@
 ns_admin_index:
+    pattern:  /admin
+    defaults: { _controller: NSAdminBundle:Default:index }
+
+ns_admin_index_dash:
     pattern:  /admin/
     defaults: { _controller: NSAdminBundle:Default:index }
 
