NEW Added multi image type 'multiple' option

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,4 +1,7 @@
 parameters:
+    ns_admin.form.type.ns_image.class:       'NS\AdminBundle\Form\Type\ImageType'
+    ns_admin.form.type.ns_multi_image.class: 'NS\AdminBundle\Form\Type\MultiImageType'
+    ns_admin.form.type.tinymce.class:        'NS\AdminBundle\Form\Type\TinyMceType'
     ns_admin.service.class:                  'NS\AdminBundle\Service\AdminService'
     ns_admin.service.uploader.class:         'NS\AdminBundle\Service\UploaderService'
     ns_admin.menu.builder.class:             'NS\AdminBundle\Menu\Builder'
@@ -7,10 +10,18 @@ parameters:
     ns_admin.menu.resolver.settings.class:   'NS\AdminBundle\Menu\Resolver\SettingsMenuResolver'
     ns_admin.menu.main.class:                'Knp\Menu\MenuItem'
     ns_admin.menu.main.voter.class:          'NS\AdminBundle\Menu\Matcher\Voter\AdminVoter'
-    ns_admin.form.type.ns_multi_image.class: 'NS\AdminBundle\Form\Type\MultiImageType'
-    ns_admin.form.type.tinymce.class:        'NS\AdminBundle\Form\Type\TinyMceType'
 
 services:
+    ns_admin.form.type.ns_multi_image:
+        class: %ns_admin.form.type.ns_multi_image.class%
+        tags:
+            - { name: form.type, alias: ns_multi_image }
+
+    ns_admin.form.type.tinymce:
+        class: %ns_admin.form.type.tinymce.class%
+        tags:
+            - { name: form.type, alias: tinymce }
+
     ns_admin.menu.resolver.collection:
         class: %ns_admin.menu.resolver.collection.class%
 
@@ -60,13 +71,3 @@ services:
     ns_admin.service.uploader:
         class: %ns_admin.service.uploader.class%
         arguments: [ @imagine.twig.extension ]
-
-    ns_admin.form.type.ns_multi_image:
-        class: %ns_admin.form.type.ns_multi_image.class%
-        tags:
-            - { name: form.type, alias: ns_multi_image }
-
-    ns_admin.form.type.tinymce:
-        class: %ns_admin.form.type.tinymce.class%
-        tags:
-            - { name: form.type, alias: tinymce }
