NEW Added new admin  pages templates

--- a/Resources/config/ns_admin.navigation.yml
+++ b/Resources/config/ns_admin.navigation.yml
@@ -5,6 +5,7 @@
     icon: "icon-home"
 -
     label:  "Настройки"
+    name: "settings"
     action: "settings:index"
     position: "last"
     icon: "icon-wrench"
