NEW Added phpinfo tool

--- a/Resources/config/ns_admin.navigation.yml
+++ b/Resources/config/ns_admin.navigation.yml
@@ -9,3 +9,7 @@
     action: "settings:index"
     position: "last"
     icon: "icon-wrench"
+-
+    label:  "Информация PHP"
+    parent: "settings"
+    action: "tools:phpinfo"
