UPDATE Moved logout link to top-right corner, improved version info

--- a/Resources/config/ns_admin.navigation.yml
+++ b/Resources/config/ns_admin.navigation.yml
@@ -8,7 +8,7 @@
     name: "settings"
     action: "settings:index"
     position: "last"
-    icon: "icon-wrench"
+    icon: "icon-cog"
 -
     label:  "Информация"
     parent: "settings"
