NEW Added config bundles backend

--- a/Resources/config/ns_admin.navigation.yml
+++ b/Resources/config/ns_admin.navigation.yml
@@ -13,3 +13,7 @@
     label:  "Информация"
     parent: "settings"
     action: "tools:info"
+-
+    label:  "Бандлы"
+    parent: "settings"
+    action: "bundles:index"
