NEW Added "env" option for admin menu config

--- a/Resources/config/ns_admin.navigation.yml
+++ b/Resources/config/ns_admin.navigation.yml
@@ -1,8 +1,3 @@
-#-
-#    label:  "Главная"
-#    action: "index:index"
-#    position: "first"
-#    icon: "icon-home"
 -
     label:  "Настройки"
     name: "settings"
@@ -17,3 +12,4 @@
     label:  "Бандлы"
     parent: "settings"
     action: "bundles:index"
+    env: "dev"
